--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "^1.5.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -26,6 +28,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
+    "recyclerlistview": "^3.0.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
