--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.9.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -18,12 +19,17 @@
     "@react-navigation/stack": "^5.14.5",
     "@reduxjs/toolkit": "^1.5.1",
     "expo": "~41.0.1",
+    "expo-camera": "~11.0.2",
+    "expo-haptics": "~10.0.0",
+    "expo-image-picker": "~10.1.4",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.7",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-picker-select": "^8.0.4",
