--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/react-native-action-sheet": "^3.9.0",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/datetimepicker": "^3.5.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
@@ -25,6 +26,7 @@
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.7",
     "lodash": "^4.17.21",
+    "luxon": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -32,6 +34,7 @@
     "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-modal-datetime-picker": "^9.2.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
@@ -41,7 +44,9 @@
     "recyclerlistview": "^3.0.5",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "talisman": "^1.1.4",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
