--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.7",
     "lodash": "^4.17.21",
+    "lottie-react-native": "3.5.0",
     "luxon": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
