--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-camera": "~11.0.2",
     "expo-haptics": "~10.0.0",
     "expo-image-picker": "~10.1.4",
+    "expo-screen-orientation": "~3.1.0",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.7",
     "lodash": "^4.17.21",
